# x2a-convertor

./: .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  app.py  docker-compose.yaml  generate_cli_docs.py  main.py  publish_logs  pyproject.toml  run-llama-stack.yaml
.github/workflows/: ci.yml  docs.yml  publish-container.yml  trigger-x2a-sync.yml
deploy/: app.yaml  operator.yaml  secrets.yaml.template
docs/: Makefile  _config.yml  api-reference.md  cli-reference.md  configuration_options.md  goals.md  index.md  molecule-integration-plan.md
docs/concepts/: architecture.md  export-agents.md  human-checkpoints.md  index.md  input-agents.md  publisher-workflow.md  publishing.md  workflow.md
docs/developing/: dependencies.md  index.md  ux_deployment.md
docs/getting-started/: configuration.md  docker-usage.md  index.md  installation.md  usage.md
docs/ui/: csv-bulk-import.md  index.md  installation-backstage.md  installation.md  mcp-server.md
ee-molecule/: Containerfile  README.md  execution-environment.yml  requirements.txt  requirements.yml
ee-x2a/: README.md
examples/: README.md
examples/hello_world/: Policyfile.lock.json
examples/puppet-examples/: README.md
openshift/: Makefile  README.md  configmap.yaml  job-analyze.yaml  job-init.yaml  job-migrate.yaml  job-validate.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  run-job.sh  secret.yaml  serviceaccount.yaml
prompts/: adversarial_system.md  adversarial_task.md  analyze_select_component_system.md  analyze_select_component_task.md  analyze_select_module_metadata_system.md  analyze_select_module_metadata_task.md  analyze_select_module_system.md  analyze_select_module_task.md  ansible_analysis_cleanup_system.md  ansible_analysis_cleanup_task.md  ansible_analysis_system.md  ansible_analysis_task.md  ansible_analysis_validation_system.md  ansible_analysis_validation_task.md  ansible_defaults_analysis_system.j2  ansible_defaults_analysis_task.j2  ansible_meta_analysis_system.j2  ansible_meta_analysis_task.j2  ansible_task_analysis_system.j2  ansible_task_analysis_task.j2  ansible_template_analysis_system.j2  ansible_template_analysis_task.j2  chef_analysis_cleanup_system.md  chef_analysis_cleanup_task.md  chef_analysis_file_validation_system.md  chef_analysis_file_validation_task.md  chef_analysis_system.md  chef_analysis_task.md  chef_analysis_validation_system.md  chef_analysis_validation_task.md  chef_attributes_extraction_system.j2  chef_attributes_extraction_task.j2  chef_provider_analysis_system.j2  chef_provider_analysis_task.j2  chef_recipe_analysis_system.j2  chef_recipe_analysis_task.j2  export_aap_discovery_system.md  export_aap_discovery_task.md  export_aap_extract_collections.md  export_ansible_execution_system.md  (+77 more)
scripts/: generate_cli_docs.py  generate_env_docs.py  generate_usage_docs.py  usage_docs_content.yaml
src/: base_agent.py  const.py  error_details.py  init.py  migrate.py  model.py  types.py  validate.py
src/adversarial/: __init__.py  adversarial_agent.py  adversarial_agent_manager.py  findings_reporter.py
src/config/: __init__.py  settings.py
src/exporters/: aap_discovery_agent.py  agent_state.py  ansible.py  ansible_molecule.py  base_agent.py  chef_to_ansible.py  credential_agent.py  export_agent.py  hiera_vars_generator.py  migrate.py  module_selection_agent.py  molecule_agent.py  planning_agent.py  review_agent.py  state.py  to_ansible.py  types.py  validation_agent.py  write_agent.py
src/init/: __init__.py  init_agent.py  init_state.py  (+4 more)
tests/: conftest.py  test_ansible.py  test_base_agent.py  test_diff_file.py  test_get_prompt.py  test_goal_validation.py  test_publisher_ansible_project.py  test_yaml_tools.py
tools/: aap_galaxy.py  ansible.py  ansible_doc_lookup.py  ansible_lint.py  ansible_role_check.py  ansible_write.py  base_tool.py  checklist.py  copy_file.py  copy_role_directory.py  create_directory_structure.py  diff_file.py  generate_github_actions_workflow.py  generate_job_template_yaml.py  generate_playbook_yaml.py  get_weather.py  github_commit_changes.py  github_create_pr.py  github_push_branch.py  grep_file.py  sed_replace.py  tools.py  validated_write.py  yaml_tools.py
(+273 files in other folders)
