[project]
name = "x2a-convertor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansible>=12.1.0",
    "click>=8.3.0",
    "ipdb>=0.13.13",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.20",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.33",
    "langgraph>=0.6.7",
    "tree-sitter>=0.23.0",
    "tree-sitter-ruby>=0.23.0",
    "tree-sitter-json>=0.23.0",
    "ansible-lint>=25.9.2",
]

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = [
    "**/node_modules",
    "**/__pycache__",
    "**/*venv/**/*",
]
search_path = ["."]

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "pyrefly>=0.37.0",
    "pytest>=8.3.0",
    "ruff>=0.13.2",
]

[tool]
