[project]
name = "x2a-convertor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansible>=12.1.0",
    "click>=8.3.0",
    "ipdb>=0.13.13",
    "langchain>=1.0.3",
    "langchain-anthropic>=0.3.20",
    "langchain-community>=0.3.27",
    "langchain-openai>=1.0.2",
    "langgraph>=1.0.2",
    "structlog>=25.4.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-ruby>=0.23.0",
    "tree-sitter-json>=0.23.0",
    "ansible-lint>=25.9.2",
]

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = [
    "**/node_modules",
    "**/__pycache__",
    "**/*venv/**/*",
]
search_path = ["."]

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "pyrefly>=0.37.0",
    "pytest>=8.3.0",
    "ruff>=0.13.2",
]

[tool.pytest.ini_options]
markers = [
    "libyaml: marks tests that require libyaml",
]

[tool.ruff]
# Exclude the logging module itself from the ban
extend-exclude = ["src/utils/logging.py"]

[tool.ruff.lint]
select = ["TID"]  # Enable flake8-tidy-imports

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"logging.getLogger".msg = "Use get_logger() from src.utils.logging instead of logging.getLogger()"

[tool]
